--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -11,6 +11,7 @@ nav
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px 0px;
 }
 nav > ul
 {
@@ -50,4 +51,23 @@ nav a
     font-weight: 700;
     color: white;
     padding: 15px 35px;
+}
+
+/* header related style */
+header
+{
+   background-color: antiquewhite;
+}
+.banner
+{
+   padding: 30px 30px 30px 150px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.banner-img img
+{
+    width: 500px;
+   
 }
