--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -216,3 +216,38 @@ main {
      text-align: center;
      margin-top: 50px;
 }
+
+/* footer style */
+footer
+{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    margin-top: 130px;
+}
+.footer-column
+{
+    padding:130px 200px;
+    width: 50%;
+}
+
+/* contact */
+.contact input[type="text"],input[type="email"],
+textarea
+{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background-color: white;
+    border: 0;
+    box-shadow: 5px 5px 10px #757575;
+    width: 100%;
+}
+
+.social-links a
+{
+    margin-right: 25px;
+}
+
